--- a/Assets/Plugins/Android/baseProjectTemplate.gradle
+++ b/Assets/Plugins/Android/baseProjectTemplate.gradle
@@ -24,6 +24,9 @@ allprojects {
             dirs "${project(':unityLibrary').projectDir}/libs"
         }
         mavenCentral()
+        maven {
+            url 'https://maven.adpumb.com/repository/adpumb/'
+        }
     }
 }
 
