--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -3,16 +3,10 @@
 apply plugin: 'com.android.library'
 **APPLY_PLUGINS**
 
-repositories{
-    maven {
-        url 'https://maven.adpumb.com/repository/adpumb/'
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.adpumb:bidmachine:0.51@aar'
+    implementation 'com.adpumb:bidmachine:0.60'
 **DEPS**}
 
 android {
