--- a/Assets/Plugins/Android/baseProjectTemplate.gradle
+++ b/Assets/Plugins/Android/baseProjectTemplate.gradle
@@ -25,6 +25,9 @@ allprojects {
         }
         mavenCentral()
         maven {
+            url 'https://maven.adpumb.com/sdk/'
+        }
+        maven {
             url 'https://maven.adpumb.com/repository/adpumb/'
         }
     }
